src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
:root {
  --body: black;
  --text: white;
  --glow: #2c2c2c;
}

body {
  margin: 0;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  text-transform: uppercase;
  background: var(--body);
  color: var(--text);
  word-break: break-word;
}

svg {
  display: block;
  width: 1rem;
  min-width: 1rem;
  height: 1rem;
}

.focus {
  background: linear-gradient(to bottom right, var(--body), var(--glow));
}

h2.focus {
  background: var(--glow);
}

[tabcol]:focus, [tabrow]:focus {
  outline: none;
}

.is-image-attachment {
  max-height: 80vh;
}

*:focus {
  outline: none;
}

a[class="focus"]:focus {
  background: var(--text);
  color: var(--body);
  border-radius: 4px;
}

.attachment-wrapper.focus {
  opacity: 0.5;
}

p {
  max-width: 100%;
  word-break: break-word;
  white-space: normal;
}

pre {
  max-width: 95vw;
  overflow-x: auto;
  background: #202328;
  color: white;
  word-break: break-word;
  white-space: pre-wrap;
}

